AB#1645 one-line form + adjusted subtitles

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -156,7 +156,8 @@
         "column-email": "Email-adress",
         "column-created": "Creation date",
         "column-delete": "Delete aidworker",
-        "create-aidworker-title": "Add aidworker",
+        "view-aidworkers": "Current aidworkers",
+        "create-aidworker": "Add new aidworker",
         "email": "Enter email",
         "confirm": "Add aidworker",
         "create-password": "Enter a password of at least {{minimalLength}} characters:",
