Add SpeakTextAudio-component to map translatable text to audio-files

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -162,6 +162,11 @@
   "connection": {
     "error-retry": "Something went wrong, do you want to try again?"
   },
+  "speak-text": {
+    "loading": "Loading",
+    "play": "Play",
+    "pause": "Pause"
+  },
   "shared": {
     "submit-button": "Submit",
     "cancel-button": "Cancel",
