--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -41,8 +41,7 @@
       "submit-username": "Submit my username",
       "supply-password": "Your password:",
       "submit-password": "Submit my password",
-      "incorrect-credentials": "The combination of username and password you provided is not recognized. Please try again.",
-      "conclusion": "Great! You have now returned to your existing Digital ID. You can log out, and find other account-features, under the green account-button in the top right."
+      "incorrect-credentials": "The combination of username and password you provided is not recognized. Please try again."
     },
     "enroll-in-program": {
       "introduction": "Hello this is <strong>{{ngo}}</strong>. We have received your request to apply for <strong>{{programTitle}}</strong>.",
