Rename translation-key to prevent false-positive lint-errors
The CAPITAL vs. lowercase "personal" is apparently hard to distinguish from a 'real' typo.

--- a/interfaces/PA-App/src/assets/i18n/ny_MW.json
+++ b/interfaces/PA-App/src/assets/i18n/ny_MW.json
@@ -1,6 +1,6 @@
 {
   "DEVICE": "Chida",
-  "PERSONAL": "Inu",
+  "YOU": "Inu",
   "WORLD": "Dera",
   "account": {
     "change-password": "Sinthani nambala yanga yachinsinsi",
