--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -120,13 +120,15 @@
         "en": "Welcome to 121. Please select your language.",
         "es": "Bienvenido a 121. Selecciona tu idioma.",
         "fr": "Bienvenu chez 121. Choisi votre langue.",
-        "ny_MW": "Takulandilani ku 121. Chonde sankhani chiyankhulo chanu."
+        "ny_MW": "Takulandilani ku 121. Chonde sankhani chiyankhulo chanu.",
+        "om_ET": "Baga gara 121'tti nagaan dhuftan. Maaloo qooqa keessan filadhaa."
       },
       "language": {
         "en": "English",
         "es": "Español",
         "fr": "Français",
-        "ny_MW": "Chichewa"
+        "ny_MW": "Chichewa",
+        "om_ET": "Afaan Oromoo"
       }
     },
     "select-program": {
@@ -139,9 +141,9 @@
       "conclusion-submitted": "Thank you. You will now receive notifications on this phone number: {{phone}}",
       "input-label": "Phone number (with country-code)",
       "introduction1": "It is optional to enter your phone number.",
-      "introduction2": "We use this to send you text-notifications when you are included or not and when you receive money.",
-      "introduction3": "If you do not want to enter your phone number, you have to log in here for updates.",
-      "introduction4": "At the end of the program, we will not keep your number.",
+      "introduction2": "We use this to send you text-notifications if you are included and when you receive money.",
+      "introduction3": "If you do not want to enter your phone number, you will have to log in here for updates.",
+      "introduction4": "At the end of the program, we will delete your number.",
       "logout-info": "If you want, you can now log out, under the account-button on the top right. When you return here, you can log in with your username and password.",
       "skip": "Skip",
       "submit": "Submit phone number"
