--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -26,12 +26,11 @@
       "introduction": "You have access to the following actions. Please select one.",
       "download-data": "Download data for validation",
       "view-appointments": "View appointments",
-      "scan-qr": "Scan PA's QR-code"
+      "scan-qr": "Scan QR-code of Person Affected"
     },
     "download-data": {
-      "downloading": "Data is being downloaded. Wait a second.",
-      "download-result": "Data downloaded for {{nrDownloaded}} Persons Affected.",
-      "main-menu": "Back to main menu."
+      "downloading": "Validation data is being downloaded. Wait a second.",
+      "download-result": "Validation data downloaded for {{nrDownloaded}} Persons Affected."
     },
     "view-appointments": {
       "introduction": "For the following timeslots appointments have been scheduled. Select a timeslot to see details.",
