--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -45,7 +45,7 @@
       "introduction": "Now scan the QR-code of the PA to identify him/her in the system.",
       "scan-button": "Scan QR-code",
       "error": "The scanned QR code did nog contain a DID or program number. You may have scanned the a wrong QR-code",
-      "unknownDidCombination": "The scanned QR-code did not contain a valid combination of DID and program-ID. You can try scanning another QR-code.",
+      "unknownDidCombination": "QR-code not found. You can try scanning another QR-code.",
       "conclusion": "Thank you. You have scanned a valid combination of DID and program-ID.",
       "main-menu": "Back to main menu"
     },
