--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -51,12 +51,12 @@
     },
     "validate-program": {
       "introduction": "Below you see the PA's information for the specific program. Check it with the PA, adapt where necessary, and confirm.",
-      "submit": "Submit answers",
+      "submit": "Confirm",
       "dob-feedback": "The date of birth does not have a valid format. Please adjust and save again.",
-      "please-confirm": "Below is an overview of the PA's information. Please confirm and submit.",
+      "please-confirm": "Below is an overview of the PA's information. Please confirm.",
       "change": "Change information",
-      "confirm-button": "Issue Program Credential",
-      "conclusion": "The Program credential has been created. As such there is no need, and thus no possibility, for you to see the PA's personal information any more here."
+      "confirm-button": "Store Program Credential",
+      "conclusion": "The Program credential has been created. Please make sure to upload it when internet is available."
     }
   },
   "connection": {
