AB#1849 Change User-menu-button into 'fourth tab'
+ remove unused tab3-page
+ rename/move tab-label/title translations
+ remove unused UI-Service
+ always show user-menu-button (only enable after login)

--- a/interfaces/PA-App/src/assets/i18n/om_ET.json
+++ b/interfaces/PA-App/src/assets/i18n/om_ET.json
@@ -1,7 +1,8 @@
 {
-  "DEVICE": "Mi'a",
-  "WORLD": "Hawaasa",
-  "YOU": "Isini",
+  "tabs": {
+    "you": "Isini",
+    "community": "Hawaasa"
+  },
   "account": {
     "change-password": "Paaswoordii jijjiiri",
     "delete-account-header": "Adda-baastuu Dijitaalaa keessan haquuf murteessitaniittu taanaan paaswoordii keessan galchaa",
