--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,7 +1,9 @@
 {
-  "DEVICE": "Device",
-  "WORLD": "Community",
-  "YOU": "You",
+  "tabs": {
+    "you": "You",
+    "community": "Community",
+    "account": "Account"
+  },
   "account": {
     "change-password": "Change password",
     "delete-account-header": "Enter your password if you are sure you want to delete your Digital ID",
