--- a/interfaces/PA-App/src/assets/i18n/ny_MW.json
+++ b/interfaces/PA-App/src/assets/i18n/ny_MW.json
@@ -1,7 +1,8 @@
 {
-  "DEVICE": "Chida",
-  "WORLD": "Dera",
-  "YOU": "Inu",
+  "tabs": {
+    "you": "Inu",
+    "community": "Dera"
+  },
   "account": {
     "change-password": "Sinthani nambala yanga yachinsinsi",
     "delete-account-header": "Yikani nambala yanu ya chinsinsi ngati mukufuna kufufuta nambala yanu",
