Fix typo in i18n-key

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -173,7 +173,7 @@
     "error-not-compatible": "Your device is not able to scan",
     "error-no-permissions": "Please allow the camera to be used and try again.",
     "error-generic": "Something went wrong.",
-    "swwitch-camera": "Switch camera",
+    "switch-camera": "Switch camera",
     "toggle-flash": "Toggle flash-light"
   },
   "shared": {
