--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -55,8 +55,8 @@
       "dob-feedback": "The date of birth does not have a valid format. Please adjust and save again.",
       "please-confirm": "Below is an overview of the PA's information. Please confirm.",
       "change": "Change information",
-      "confirm-button": "Store Program Credential",
-      "conclusion": "The Program credential has been created. Please make sure to upload it when internet is available."
+      "confirm-button": "Save",
+      "conclusion": "The validation data has been saved. Please make sure to upload it when internet is available."
     }
   },
   "connection": {
