AB#1820 fix mistake

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -128,8 +128,8 @@
           "vulnerability-assessment-completed": "Completed Vulnerability Assessment",
           "selected-for-validation": "Selected for validation",
           "vulnerability-assessment-validated": "Validated Vulnerability Assessment",
-          "final-score": "Temporary inclusion score",
-          "temp-score": "Validated inclusion score"
+          "final-score": "Validated inclusion score",
+          "temp-score": "Temporary inclusion score"
         },
         "actions": {
           "select-for-validation": "Select for validation"
