AB#1938 'program-manager' to 'project-officer'

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -187,7 +187,7 @@
     },
     "help": {
       "pageTitle": "Help",
-      "user-manual": "User manual for program-manager",
+      "user-manual": "User manual for project-officer",
       "user-manual-content": "Needs to be added."
     }
   },
