AB2117 Created upload option in main meny and upload component

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -27,7 +27,8 @@
       "introduction": "The following actions are available. Please select one.",
       "download-data": "Download validation data",
       "view-appointments": "View appointments",
-      "scan-qr": "Scan PA's QR-code"
+      "scan-qr": "Scan PA's QR-code",
+      "upload-data": "Upload validation data"
     },
     "download-data": {
       "downloading": "Validation data is being downloaded. Wait a second.",
