Create components intergration AB#2117

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -51,6 +51,11 @@
       "conclusion": "Thank you. You have scanned a valid combination of DID and program-ID.",
       "main-menu": "Back to main menu"
     },
+    "upload-data": {
+      "uploading": "Validation data is being downloaded. Wait a second.",
+      "upload-result": "Validation data downloaded for {{nrDownloaded}} Persons Affected.",
+      "upload-aborted": "No validation data could be downloaded at this time. Please try again later."
+    },
     "validate-program": {
       "introduction": "Below you see the PA's information for the specific program. Check it with the PA, adapt where necessary, and confirm.",
       "submit": "Confirm",
