--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -124,12 +124,22 @@
         "column": {
           "select": "Select",
           "person": "Person Affected",
+          "status": "Status",
           "digital-id-created": "Created Digital ID",
           "vulnerability-assessment-completed": "Completed Vulnerability Assessment",
           "selected-for-validation": "Selected for validation",
           "vulnerability-assessment-validated": "Validated Vulnerability Assessment",
           "final-score": "Validated inclusion score",
           "temp-score": "Temporary inclusion score"
+        },
+        "status": {
+          "created": "Created",
+          "registered": "Registered",
+          "selectedForValidation": "Selected for Validation",
+          "validated": "Validated",
+          "included": "Included",
+          "excluded": "Excluded",
+          "rejected": "Rejected"
         },
         "actions": {
           "select-for-validation": "Select for validation"
