--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -14,6 +14,10 @@
     "payment": "Payment",
     "evaluation": "Evaluation"
   },
+  "user-state": {
+    "logged-in-as": "Logged in as",
+    "log-out": "Log out"
+  },
   "page": {
     "login": {
       "form": {
