AB#2151 Add Dashboard-page

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -19,6 +19,9 @@
     "log-out": "Log out"
   },
   "page": {
+    "dashboard": {
+      "pageTitle": "Dashboard"
+    },
     "login": {
       "form": {
         "email": {
