--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -22,6 +22,9 @@
     "dashboard": {
       "pageTitle": "Dashboard"
     },
+    "aid-workers": {
+      "pageTitle": "Aid-workers"
+    },
     "login": {
       "form": {
         "email": {
