AB#2216 create export-inclusion component

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -180,6 +180,10 @@
       "program-modal": {
         "pageTitle": "Program JSON"
       },
+      "export-inclusion": {
+        "export-list": "Export inclusion list",
+        "confirm-message": "This will download a CSV-file with all included People Affected, to be used for a Community Review."
+      },
       "manage-aidworkers": {
         "section-title": "Manage aidworkers",
         "column-email": "Email-adress",
