--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -1,7 +1,4 @@
 {
-  "LOGIN": "Log in",
-  "LOGOUT": "Log out",
-  "MENU": "Menu",
   "header": {
     "home": "Home",
     "dashboard": "Dashboard",
@@ -26,6 +23,7 @@
       "pageTitle": "Aid-workers"
     },
     "login": {
+      "pageTitle": "Log in",
       "form": {
         "email": {
           "label": "E-mail"
